# greyh0und

./: README.md
jenv/: CMakeLists.txt  jenv.c
jenv/include/: jenv.h
libble/: CMakeLists.txt  afl.js  fuzz.c
libble/blelib_unique_crashes/: id:000018,sig:11,src:000250,time:48937406,execs:15049,op:havoc,rep:2  id:000021,sig:11,src:000250,time:49649502,execs:26033,op:havoc,rep:2  id:000024,sig:11,src:000242+000281,time:51363344,execs:43557,op:splice,rep:4  id:000027,sig:11,src:000160,time:60946434,execs:117382,op:havoc,rep:4  id:000035,sig:11,src:000268+000159,time:83690712,execs:273965,op:splice,rep:4
libble/include/: fuzz.h
libthing_security/: CMakeLists.txt  afl.js  fuzz.c  patch_library.py  patch_library.sh
libthing_security/mock/: Makefile  README_MOCKS.md  build_classes.sh  build_java_only.sh
libthing_security/mock/com/thingclips/smart/security/jni/: JNICLibrary.java
libthing_security/mock/mock/content/: Context.java
libthing_security/mock/mock/content/pm/: PackageManager.java
libthing_security/mock/mock/content/res/: AssetManager.java
libthing_security/mock/mock/util/: Log.java
